--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 					<img alt="Google Chrome" title="Google Chrome"
 						src="https://static.thenounproject.com/png/15619-200.png" class="image fit">
 					<p> Working in the front-end, I have worked with and built several applications with HTML, CSS,
-						JavaScript, and React. I have some experience with Bootstrap, NPM, and ASP.NET and am interested
-						in expanding to Express.js.<br />
+						JavaScript, and React. I have some experience with Bootstrap and NPM, and am interested
+						in expanding to TypeScript .<br />
 					</p>
 
 				</article>
